content/boundary/v0.1.x/content/docs/concepts/domain-model/accounts.mdx
---
layout: docs
page_title: Domain Model - Accounts
sidebar_title: Accounts
description: |-
  The anatomy of a Boundary account
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# Accounts

An account is a resource
that represents a unique set of credentials
issued from a configured [auth method][]
which can be used to establish the identity of a user.
A [user][] can have zero or more accounts
but an account can only belong to a single user.
An account can only be associated with a user
in the same scope as the account's [auth method][].

## Attributes

All account types have the following configurable attributes:

- `name` - (optional)
  If set, the `name` must be unique within the account's [auth method][].

- `description` - (optional)

### Password Account Attributes

Password account types have the following additional attributes:

- `login_name` - (required)
  Must be unique within the account's [auth method][].
  Can only contain lower case letters.

- `password` - (optional)
  Not setting the `password` disables the account.

## Referenced By

- [Auth Method][]
- [User][]

[auth method]: /docs/concepts/domain-model/auth-methods
[user]: /docs/concepts/domain-model/users

## Service API Docs

The following services are relevant to this resource:

- [Account Service](/api-docs/account-service)
